--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 						<li>
 							<a href="#contact" class="menu-item-4">Contact</a>
 						</li>
+                        <li class="cv">
+							<a href="assets/cv/cv-jessica-bennett.pdf" target="_blank">Download CV</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -376,15 +379,15 @@
 							<a href="index.html" class="menu-item-1 active" onclick="$('#menu-modal').modal('hide')">Home</a>
 						</li>
 						<li>
-							<a href="#about" class="menu-item-2" onclick="$('#menu-modal').modal('hide')">About</a>
+							<a href="/#about" class="menu-item-2" onclick="$('#menu-modal').modal('hide')">About</a>
 						</li>
 						<li>
-							<a href="#portfolio" class="menu-item-3" onclick="$('#menu-modal').modal('hide')">Portfolio</a>
+							<a href="/#portfolio" class="menu-item-3" onclick="$('#menu-modal').modal('hide')">Portfolio</a>
 						</li>
 						<li>
-							<a href="#contact" class="menu-item-4" onclick="$('#menu-modal').modal('hide')">Contact</a>
+							<a href="/#contact" class="menu-item-4" onclick="$('#menu-modal').modal('hide')">Contact</a>
 						</li>
-						<li>
+						<li class="cv">
 							<a href="assets/cv/cv-jessica-bennett.pdf" target="_blank" onclick="$('#menu-modal').modal('hide')">Download CV</a>
 						</li>
 					</ul>
