Download cv option added to desktop menu.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 						<li>
 							<a href="#contact" class="menu-item-4">Contact</a>
 						</li>
+                        <li class="cv">
+							<a href="assets/cv/cv-jessica-bennett.pdf" target="_blank">Download CV</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -384,7 +387,7 @@
 						<li>
 							<a href="#contact" class="menu-item-4" onclick="$('#menu-modal').modal('hide')">Contact</a>
 						</li>
-						<li>
+						<li class="cv">
 							<a href="assets/cv/cv-jessica-bennett.pdf" target="_blank" onclick="$('#menu-modal').modal('hide')">Download CV</a>
 						</li>
 					</ul>
