Menu and portfolio flip card responsiveness changed to include md devices with sm devices. README file started.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header id="home">
         <nav class="container-fluid fixed-top">
 			<div class="row">
-				<div class="col col-md-2">
+				<div class="col col-lg-2">
 					<a href="index.html" id="circle-cover-bg"></a>
 				</div>
-				<div class="col col-md-10">
-					<i id="menu-xs" class="fas fa-bars d-block d-md-none" data-toggle="modal" data-target="#menu-modal"></i>
-					<ul id="menu-md" class="d-none d-md-block">
+				<div class="col col-lg-10">
+					<i id="menu-xs" class="fas fa-bars d-block d-lg-none" data-toggle="modal" data-target="#menu-modal"></i>
+					<ul id="menu-lg" class="d-none d-lg-block">
 						<li>
 							<a href="#home" class="menu-item-1 active">Home</a>
 						</li>
@@ -236,7 +236,7 @@
         </div>
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
+                <div class="col-6 col-lg-4 p-2 d-flex justify-content-center">
 					<div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -246,7 +246,7 @@
                                 </div>
 					        </div>
                             <div class="flip-card-back">
-                                <p class="d-none d-md-block">I built this site as part of my entry assessment for Code Institute's software development course.
+                                <p class="d-none d-lg-block">I built this site as part of my entry assessment for Code Institute's software development course.
                                 Is it beautiful and well-made? Absolutely not! But it was created with a huge amount of enthusiasm and dedication
                                 (and zero coding knowledge!). So I'm proud to display it, regardless of its many, many faults.</p>
                                 <a href="https://llanelli-to-dursley--j355.repl.co/" target="_blank">Visit site</a>
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
+                <div class="col-6 col-lg-4 p-2 d-flex justify-content-center">
                     <div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -264,14 +264,14 @@
                                 </div>
 					        </div>
                             <div class="flip-card-back">
-                                <p class="d-none d-md-block">You might recognise this site... Here it is - my first 'proper' website, built with the 
+                                <p class="d-none d-lg-block">You might recognise this site... Here it is - my first 'proper' website, built with the 
                                 knowledge and skills that I'm currently gaining. Feel free to click to 'visit site', but you might find yourself in an inception-like loop!</p>
                                 <a href="#portfolio" target="_blank">Visit site</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 p-2 d-flex justify-content-center">
+                <div class="col-6 col-lg-4 p-2 d-flex justify-content-center">
                     <div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -281,7 +281,7 @@
                                 </div>
 					        </div>
                             <div class="flip-card-back">
-                                <p class="d-none d-md-block">Coming soon...</p>
+                                <p class="d-none d-lg-block">Coming soon...</p>
                                 <button disabled>Visit site</button>
                             </div>
                         </div>
@@ -289,7 +289,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-6 col-md-4 p-2 pb-4 d-flex justify-content-center">
+                <div class="col-6 col-lg-4 p-2 pb-4 d-flex justify-content-center">
 					<div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -299,13 +299,13 @@
                                 </div>
 					        </div>
                             <div class="flip-card-back">
-                                <p class="d-none d-md-block">Coming soon...</p>
+                                <p class="d-none d-lg-block">Coming soon...</p>
                                 <button disabled>Visit site</button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 p-2 pb-4 d-flex justify-content-center">
+                <div class="col-6 col-lg-4 p-2 pb-4 d-flex justify-content-center">
                     <div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -315,7 +315,7 @@
                                 </div>
 					        </div>
                             <div class="flip-card-back">
-                                <p class="d-none d-md-block">Coming soon...</p>
+                                <p class="d-none d-lg-block">Coming soon...</p>
                                 <button disabled>Visit site</button>
                             </div>
                         </div>
@@ -360,6 +360,11 @@
                 </div>
                 <div class="col">
                     <a href="https://www.linkedin.com/in/jessica-bennett-33750368/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p class="footer-text small"> &copy; | 2020 | Jessica Bennett </p>
                 </div>
             </div>
         </div>
