Keyframes animations updated to include all browsers.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="container-fluid fixed-top">
 			<div class="row">
 				<div class="col col-lg-2">
-					<a href="index.html" id="circle-cover-bg"></a>
+					<a href="#home" id="circle-cover-bg"></a>
 				</div>
 				<div class="col col-lg-10">
 					<i id="menu-xs" class="fas fa-bars d-block d-lg-none" data-toggle="modal" data-target="#menu-modal"></i>
