--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<script src="https://kit.fontawesome.com/372df47477.js" crossorigin="anonymous"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <!--=============================================== Credit: https://favicon.io/ -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -370,6 +371,7 @@
         </div>
     </footer>
     <!--=============================================== Menu modal -->
+    <!--=============================================== JS Credit: https://stackoverflow.com/questions/13319678/can-i-close-the-bootstrap-modal-once-the-link-has-been-clicked -->
 	<div class="modal fade" tabindex="-1" role="dialog" id="menu-modal">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
@@ -591,6 +593,7 @@
 	</div>
     <!--=============================================== My JavaScript -->
     <!--=============================================== Animation JavaScript -->
+    <!--=============================================== Credit: https://cssanimation.rocks/scroll-animations/  -->
     <script>
         // Detect request animation frame
         var scroll = window.requestAnimationFrame ||
@@ -635,6 +638,7 @@
 
     </script>
     <!--=============================================== Active menu JavaScript -->
+    <!--=============================================== Credit: https://www.steckinsights.com/change-active-menu-as-you-scroll-with-jquery/ -->
 	<script>
 		$(document).ready(function() { // Tells the function to wait to preform until everything on the page has loaded.
 		$(window).scroll(function() { // Says this function is preformed continuisly while scrolling.
@@ -672,13 +676,6 @@
 		});
     </script>
 
-
-	<!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script> -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script> -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
