Added latest project to portfolio page

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
                                 </div>
 					        </div>
                             <div class="flip-card-back">
+                                <p><strong>Entry assessment for Code Institute's software development course</strong></p>
                                 <p class="d-none d-lg-block">I built this site as part of my entry assessment for Code Institute's software development course.
                                 Is it beautiful and well-made? Absolutely not! But it was created with a huge amount of enthusiasm and dedication
                                 (and zero coding knowledge!). So I'm proud to display it, regardless of its many, many faults.</p>
@@ -270,8 +271,9 @@
                                 </div>
 					        </div>
                             <div class="flip-card-back">
-                                <p class="d-none d-lg-block">You might recognise this site... Here it is - my first 'proper' website, built with the 
-                                knowledge and skills that I'm currently gaining. Feel free to click to 'visit site', but you might find yourself in an inception-like loop!</p>
+                                <p><strong>User Centric Frontend Development Milestone Project</strong><br>
+                                Grade: Merit</p>
+                                <p class="d-none d-lg-block">The purpose of my project was to create a personal website to showcase my work as a software developer and also to provide some background information on my career up to this point. Essentially, I wanted to create a ‘living’ CV.</p>
                                 <a href="#portfolio" target="_blank">Visit site</a>
                             </div>
                         </div>
@@ -287,9 +289,12 @@
                                 </div>
 					        </div>
                             <div class="flip-card-back">
-                                <p class="d-none d-lg-block">Project purpose: Presentation of interactive data<br>
-                                Expected date of completion: November 2020</p>
-                                <button disabled>Visit site</button>
+                                <p><strong>Interactive Frontend Development Milestone Project</strong><br>
+                                Grade: Distinction</p>
+                                <p class="d-none d-lg-block">I was inspired to create this site by my 2-year-old son (Eddie) who loves to be tested on the letters of the alphabet.
+
+Alphabet products for small children tend to be quite traditional: 'A is for apple, B is for ball...'. I wanted to create something that extends this concept using objects that children will be familiar with and enthusiastic about.</p>
+                                <a href="https://jess-bennett.github.io/letter-bee/" target="_blank">Visit site</a>
                             </div>
                         </div>
                     </div>
