Updated SD section

--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@ Alphabet products for small children tend to be quite traditional: 'A is for app
 					<img src="assets/images/current-sq.jpg" alt="Jess bennett currently"/>
                     <div class="modal-title">
                         <div>
-                            <h5>Full Stack Software Development Student</h5>
+                            <h5>Full Stack Software Developer</h5>
                             <br />
-                            <h5>Present - 2021</h5>
+                            <h5>2020 - Present</h5>
                         </div>
                     </div>
 				</div>
@@ -574,13 +574,13 @@ Alphabet products for small children tend to be quite traditional: 'A is for app
 						have loved. But the most frustrating part has been my desire to do
 						the coding myself (creating dashboards in Qlikview, automated VBA
 						in Excel, website amendments...) combined with my slight
-						(self-taught) ineptitude. <br>This is what has driven me to enrol as a
+						(self-taught) ineptitude. <br>This is what has drove me to enrol as a
 						student once more, with Code Institute. <br>My journey from qualified
 						teacher, to Psychology of Education student, then researcher, data
-						analyst and now Full Stack Software Development student has been
+						analyst and now Full Stack Software Developer has been
 						difficult at times , often confusing and has led to the odd
 						existential crisis(!). But it's all starting to come together...<br>
-						Which leaves me: a soon-to-be qualified Full Stack Software
+						Which leaves me: a newly qualified Full Stack Software
 						Developer, with valuable skills from each point of my journey, and
 						someone who is as creative as they are logical. Not one or the
 						other...
