--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
     <section id="skills">
         <div class="section__title">
             <div>
-                <h5>Full Stack Software Development Student</h5>
-                <h5>Present - 2021</h5>
+                <h5>Full Stack Software Developer</h5>
+                <h5>2020 - Present</h5>
             </div>
         </div>
         <div class="container-fluid">
@@ -162,73 +162,73 @@
 							logic-based creativity.</em> <br><strong>~ John Romero</strong>
 						</blockquote>
 						<p>
-							Having recently found this quote, it's been a relief to learn
-							that perhaps I haven't 'failed' every personality test I've ever
-							taken; where logic and creativity appear to be either/or
-							options. Instead, it's just taken me a while to get on the right
-							path for my inherent skillset. <br>Or rather, I've always been on
-							the right path, but now I've got to the really exciting bit.
-							<br>There are so many aspects of all the work I've undertaken in my
-							life that I have loved. But the most frustrating part has been
-							my desire to do the coding myself (creating dashboards in
-							Qlikview, automated VBA in Excel, website amendments...)
-							combined with my slight (self-taught) ineptitude. <br>This is what
-							has driven me to enrol as a student once more, with Code
-							Institute. <br>My journey from qualified teacher, to Psychology of
-							Education student, then researcher, data analyst and now Full
-							Stack Software Development student has been difficult at times ,
-							often confusing and has led to the odd existential crisis(!).
-							But it's all starting to come together... <br>Which leaves me: a
-							soon-to-be qualified Full Stack Software Developer, with
-							valuable skills from each point of my journey, and someone who
-							is as creative as they are logical. Not one or the other...
+							Having recently found this quote, it's been a relief to learn that
+						perhaps I haven't 'failed' every personality test I've ever taken;
+						where logic and creativity appear to be either/or options.
+						Instead, it's just taken me a while to get on the right path for
+						my inherent skillset. <br>Or rather, I've always been on the right
+						path, but now I've got to the really exciting bit. <br>There are so
+						many aspects of all the work I've undertaken in my life that I
+						have loved. But the most frustrating part has been my desire to do
+						the coding myself (creating dashboards in Qlikview, automated VBA
+						in Excel, website amendments...) combined with my slight
+						(self-taught) ineptitude. <br>This is what has drove me to enrol as a
+						student once more, with Code Institute. <br>My journey from qualified
+						teacher, to Psychology of Education student, then researcher, data
+						analyst and now Full Stack Software Developer has been
+						difficult at times , often confusing and has led to the odd
+						existential crisis(!). But it's all starting to come together...<br>
+						Which leaves me: a newly qualified Full Stack Software
+						Developer, with valuable skills from each point of my journey, and
+						someone who is as creative as they are logical. Not one or the
+						other...
 						</p>
                 </div>
                 <div class="col-12 col-md-6 progress-section">
                     <h4>Skills</h4>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress--color-a" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                        <div class="progress-bar progress-bar-striped progress--color-a" role="progressbar" aria-valuenow="98" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 98%;">
+                            <span class="sr-only">98% complete</span>
+                        </div>
+                        <span class="progress-type">HTML / HTML5</span>
+                        <div class="progress-bar progress-background" role="progressbar" style="width:2%">
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress--color-b" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                             aria-valuemax="100" style="width: 90%;">
                             <span class="sr-only">90% complete</span>
                         </div>
-                        <span class="progress-type">HTML / HTML5</span>
+                        <span class="progress-type">CSS / CSS3</span>
                         <div class="progress-bar progress-background" role="progressbar" style="width:10%">
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress--color-b" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                            aria-valuemax="100" style="width: 80%;">
-                            <span class="sr-only">80% complete</span>
+                        <div class="progress-bar progress-bar-striped progress--color-a" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 85%;">
+                            <span class="sr-only">85% complete</span>
                         </div>
-                        <span class="progress-type">CSS / CSS3</span>
-                        <div class="progress-bar progress-background" role="progressbar" style="width:20%">
-                        </div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress--color-c" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-                            aria-valuemax="100" style="width: 0%;">
-                            <span class="sr-only">0% complete</span>
-                        </div>
-                        <span class="progress-type">JavaScript / jQuery - Coming soon...</span>
-                        <div class="progress-bar progress-background" role="progressbar" style="width:100%">
+                        <span class="progress-type">JavaScript / jQuery</span>
+                        <div class="progress-bar progress-background" role="progressbar" style="width:5%">
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress--color-c" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-                            aria-valuemax="100" style="width: 0%;">
-                            <span class="sr-only">0% complete</span>
+                        <div class="progress-bar progress-bar-striped progress--color-b" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 70%;">
+                            <span class="sr-only">70% complete</span>
                         </div>
-                        <span class="progress-type">Python / Django - Coming soon...</span>
-                        <div class="progress-bar progress-background" role="progressbar" style="width:100%">
+                        <span class="progress-type">Python / Django</span>
+                        <div class="progress-bar progress-background" role="progressbar" style="width:30%">
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress--color-c" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-                            aria-valuemax="100" style="width: 0%;">
-                            <span class="sr-only">0% complete</span>
+                        <div class="progress-bar progress-bar-striped progress--color-a" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                            aria-valuemax="100" style="width: 65%;">
+                            <span class="sr-only">65% complete</span>
                         </div>
-                        <span class="progress-type">SQL / NoSQL - Coming soon...</span>
-                        <div class="progress-bar progress-background" role="progressbar" style="width:100%">
+                        <span class="progress-type">SQL / NoSQL</span>
+                        <div class="progress-bar progress-background" role="progressbar" style="width:35%">
                         </div>
                     </div>
                 </div>
