Updated portfolio section

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <span class="sr-only">85% complete</span>
                         </div>
                         <span class="progress-type">JavaScript / jQuery</span>
-                        <div class="progress-bar progress-background" role="progressbar" style="width:5%">
+                        <div class="progress-bar progress-background" role="progressbar" style="width:15%">
                         </div>
                     </div>
                     <div class="progress">
@@ -246,7 +246,7 @@
 					<div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
-								<img src="assets/images/first-website.JPG" alt="first website"/>
+								<img src="assets/images/first-website.jpg" alt="first website"/>
                                 <div class="caption">
                                     <p>More details</p>
                                 </div>
@@ -265,7 +265,7 @@
                     <div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
-								<img src="assets/images/developer-website.JPG" alt="developer website"/>
+								<img src="assets/images/developer-website.jpg" alt="developer website"/>
                                 <div class="caption">
                                     <p>More details</p>
                                 </div>
@@ -305,15 +305,19 @@ Alphabet products for small children tend to be quite traditional: 'A is for app
 					<div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
-								<img src="assets/images/data-centric.png" alt="data-centric website"/>
+								<img src="assets/images/data-centric.jpg" alt="data-centric website"/>
                                 <div class="caption">
                                     <p>More details</p>
                                 </div>
 					        </div>
                             <div class="flip-card-back">
-                                <p class="d-none d-lg-block">Project purpose: A full-stack site that allows users to manage a common dataset about a particular domain.<br>
-                                Expected date of completion: January 2021</p>
-                                <button disabled>Visit site</button>
+                                <p><strong>Data Centric Development Milestone Project</strong><br>
+                                Grade: Distinction</p>
+                                <p class="d-none d-lg-block">This site was created to support a local recyling group I belong to. Although recycling is not the answer, it
+                                    is still an important part of living a more environmentally-conscious lifestyle. The Recycling Hive allows people to find the best recycling
+                                    solutions in their area.
+                                </p>
+                                <a href="https://recycling-hive.herokuapp.com/" target="_blank">Visit site</a>
                             </div>
                         </div>
                     </div>
@@ -322,15 +326,19 @@ Alphabet products for small children tend to be quite traditional: 'A is for app
                     <div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
-								<img src="assets/images/full-stack.png" alt="full-stack website"/>
+								<img src="assets/images/full-stack.jpg" alt="full-stack website"/>
                                 <div class="caption">
                                     <p>More details</p>
                                 </div>
 					        </div>
                             <div class="flip-card-back">
-                                <p class="d-none d-lg-block">Project purpose: A full-stack site based around business logic used to control a centrally-owned dataset.<br>
-                                Expected date of completion: April 2021</p>
-                                <button disabled>Visit site</button>
+                                <p><strong>Full Stack Frameworks with Django Milestone Project</strong><br>
+                                Grade: Distinction</p>
+                                <p class="d-none d-lg-block">Eat Your Seasons was designed to help people live a more sustainable lifestyle via their food choices. It was created as
+                                    a subscription-site, however you are welcome to sign in with demo@demo.com, password: takealook
+                                    Perhaps you'll find something for dinner tonight!
+                                </p>
+                                <a href="https://eat-your-seasons.herokuapp.com/" target="_blank">Visit site</a>
                             </div>
                         </div>
                     </div>
